Fix scrollbar in settings panel

--- a/src/scss/skin-modern/components/_settingspanel.scss
+++ b/src/scss/skin-modern/components/_settingspanel.scss
@@ -41,7 +41,7 @@
   }
 
   > .container-wrapper {
-    overflow-y: scroll;
+    overflow-y: auto;
     margin: .5em;
 
     > * {
